apis/deployments/accounts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-api
spec:
  selector:
    matchLabels:
      app: accounts-api
  template:
    metadata:
      labels:
        app: accounts-api
    spec:
      containers:
      - name: accounts-api
        image: accounts-api:v1

        ports:
        - containerPort: 80
