apis/deployments/accounts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-api-service
spec:
  selector:
    app: accounts-api
  ports:
  - port: 80
    targetPort: 80
