apis/deployments/accounts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
    nginx.ingress.kubernetes.io/cors-allow-origins: "http://app.hypertheory.com"
  name: account-ingress
  labels:
    name: account-ingress
spec:
  rules:
  - host: api.hypertheory.com
    http:
      paths:
      - pathType: Prefix
        path: /my(/|$)(.*)
        backend:
          service:
            name: accounts-api-service
            port: 
              number: 80
